--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,12 @@
 <p>footer works!</p>
+
+<footer>
+    <section class="buttons">
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-envelope"></a>
+      <a href="#" class="fa fa-instagram"></a>
+    </section><br>
+    <p>&copy; 2024 Marva Sport Center. Todos los derechos reservados.</p>
+  </footer>
+
