--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark"> <!-- fixed-top > antes de bg -->
+<nav class="navbar navbar-expand-lg fixed-top bg-primary" data-bs-theme="dark"> <!-- fixed-top > antes de bg -->
   <div class="container-fluid">
    <img id="logo-navbar" src="./assets/img/logoCuadrado.png" alt="Logo" width="140" height="110" class="d-inline-block align-text-top">
   
@@ -18,7 +18,7 @@
           <a class="nav-link active" aria-current="page" href="#">INICIO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">SERVICIOS</a>
+          <a class="nav-link active" aria-current="page" href="#" routerLink="/servicios" routerLinkActive="active">SERVICIOS</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">NUESTRO EQUIPO</a>
@@ -27,16 +27,22 @@
           <a class="nav-link active" aria-current="page" href="#">CENTRO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">CONTACTO</a>
+          <a class="nav-link active" aria-current="page" href="#" routerLink="/formulario" routerLinkActive="active">CONTACTO</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">VEN A PROBAR!! </a>
         </li>
+ -->
+
+      </ul>
+
+
+
         <!-- MENOS OSCURO EL COLOR PERO SE RESALTA CUANDO CURSOR POR ENCIMA
            <li class="nav-item">
           <a class="nav-link" href="#">SERVICIOS</a>
         </li> -->
-      </ul>
+     
        <!--
     
 
