--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -1,1 +1,32 @@
-<p>formulario works!</p>
+
+
+<form class="form-info">
+    <h3 class="display-6">Accede a una reserva gratuita</h3>
+    <div class="row g-3 mb-3"> <!--g <espacion entre nombre-apellidos>   mb < marginBotom > -->
+        <div class="col">
+        <input type="text" class="form-control" placeholder="Nombre" aria-label="First name" required>
+        </div>
+        <div class="col ">
+        <input type="text" class="form-control" placeholder="Apellidos" aria-label="Last name" required>
+        </div>
+    </div>
+    <div class="form-group mb-3">
+    <input type="email" class="form-control" placeholder="Correo electrónico" required>
+    </div>
+    <div class="form-group mb-3">
+    <input type="tel" class="form-control" placeholder="Teléfono">
+    </div>
+    <div class="form-group mb-3">
+    <select class="form-control">
+        <option value="">¿Cómo has llegado hasta aquí?</option>
+        <option value="busqueda">Google</option>
+        <option value="redes-sociales">Redes Sociales</option>
+        <option value="recomendacion">Recomendación amigo/familiar</option>
+        <option value="otro">Vivo/Trabajo cerca</option>
+    </select>
+    </div>
+    <div class="form-group mb-3">
+    <textarea class="form-control" rows="3" placeholder="Mensaje"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Enviar</button>
+</form>
