Se han añadido mas servicios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,6 @@
-
-
-
-
-
-
 <!-- AÑADIR COMPONENTES  -->
-
 <app-navbar></app-navbar>
-
 <br>
-
+<!-- <app-servicios></app-servicios> -->
 <router-outlet></router-outlet>
-<br>
-<app-servicios></app-servicios>
+
