--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -1,21 +1,75 @@
-<h1>-- SERVICIOS --</h1>
-<br>
-<h3>ENTRENAMIENTO PERSONAL</h3>
-<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="10000">
-        <img src="" class="d-block w-100" alt="...">
+<div class="p-4 my-9">
+  <h1 style="text-align: center;">-- SERVICIOS --</h1>
+  <br>
+  <h3 style="text-align: center;">ENTRENAMIENTO PERSONAL</h3>
+  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="assets\img\servicios\ePersonal.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="" class="d-block w-100" alt="...">
+        </div>
       </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="" class="d-block w-100" alt="...">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+  </div>
+  <br>
+  <h3 style="text-align: center;">ENTRENAMIENTOS GRUPALES</h3>
+  <div class="card-group">
+    <div class="card">
+      <img class="card-img-top" src="assets\img\servicios\MIITT.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">HITT</h5>
+        <p class="card-text">Entrenamiento de intervalos de alta intensidad, 
+          <br>combina tiempo de trabajo y tiempo de descanso.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    <div class="card">
+      <img class="card-img-top" src="assets\img\servicios\TRAINING.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">TRAINING</h5>
+        <p class="card-text">Entrenamiento en grupos reducidos que combina trabajo de fuerza, 
+          <br>movilidad y cardiovascular.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="assets\img\servicios\pesosLibres.png" alt="Card image cap" style="height: 736px;">
+      <div class="card-body">
+        <h5 class="card-title">PESOS LIBRES</h5>
+        <p class="card-text">Total acceso a todo el material (mancuernas, pesas, máquinas), 
+          <br>para utilizar de forma libre.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
   </div>
+  <br>
+  <h3 style="text-align: center;">SERVICIOS ADICIONALES</h3>
+  <div class="card-group">
+    <div class="card">
+      <img class="card-img-top" src="assets\img\servicios\fisio.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">FISIO</h5>
+        <p class="card-text">Entrenamiento de intervalos de alta intensidad, 
+          <br>combina tiempo de trabajo y tiempo de descanso.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="assets\img\servicios\nutri1.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">NUTRICIONISTA</h5>
+        <p class="card-text">Entrenamiento en grupos reducidos que combina trabajo de fuerza, 
+          <br>movilidad y cardiovascular.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+</div>
