cambio disposición de servicios

--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -1,8 +1,13 @@
-<div class="p-4 my-9">
-  <h1 style="text-align: center;">-- SERVICIOS --</h1>
+<div class="p-4 my-9" style="align-items: center;">
+  <br>
+  <br>
+  <br>
+  <br>
+  <h1 style="text-align: center;"><b><i><u>SERVICIOS</u></i></b></h1>
   <br>
   <h3 style="text-align: center;">ENTRENAMIENTO PERSONAL</h3>
-  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+  <br>
+  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel ">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
           <img src="assets\img\servicios\ePersonal.png" class="d-block w-100" alt="...">
@@ -22,54 +27,48 @@
   </div>
   <br>
   <h3 style="text-align: center;">ENTRENAMIENTOS GRUPALES</h3>
-  <div class="card-group">
-    <div class="card">
-      <img class="card-img-top" src="assets\img\servicios\MIITT.png" alt="Card image cap">
+  <br>
+  <div style="display: flex; justify-content: center;">
+    <div class="card" style="width: 18rem; margin-right: 200px;">
+      <img src="assets\img\servicios\MIITT.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">HITT</h5>
-        <p class="card-text">Entrenamiento de intervalos de alta intensidad, 
-          <br>combina tiempo de trabajo y tiempo de descanso.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title">MITT</h5>
+        <p class="card-text">Entrenamiento de intervalos de alta intensidad, combina tiempo de trabajo y tiempo de descanso.</p>
       </div>
     </div>
-    <div class="card">
-      <img class="card-img-top" src="assets\img\servicios\TRAINING.png" alt="Card image cap">
+    <div class="card" style="width: 18rem;">
+      <img src="assets\img\servicios\TRAINING.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">TRAINING</h5>
-        <p class="card-text">Entrenamiento en grupos reducidos que combina trabajo de fuerza, 
-          <br>movilidad y cardiovascular.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="assets\img\servicios\pesosLibres.png" alt="Card image cap" style="height: 736px;">
-      <div class="card-body">
-        <h5 class="card-title">PESOS LIBRES</h5>
-        <p class="card-text">Total acceso a todo el material (mancuernas, pesas, máquinas), 
-          <br>para utilizar de forma libre.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text">Entrenamiento en grupos reducidos que combina trabajo de fuerza, movilidad y cardiovascular .</p>
       </div>
     </div>
   </div>
   <br>
+  <br>
   <h3 style="text-align: center;">SERVICIOS ADICIONALES</h3>
-  <div class="card-group">
-    <div class="card">
-      <img class="card-img-top" src="assets\img\servicios\fisio.png" alt="Card image cap">
+  <br>
+  <div style="display: flex; justify-content: center;">
+    <div class="card" style="width: 18rem; margin-right: 200px;">
+      <img src="assets\img\servicios\fisio.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">FISIO</h5>
-        <p class="card-text">Entrenamiento de intervalos de alta intensidad, 
-          <br>combina tiempo de trabajo y tiempo de descanso.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
     </div>
-    <div class="card">
-      <img class="card-img-top" src="assets\img\servicios\nutri1.png" alt="Card image cap">
+    <div class="card" style="width: 18rem; margin-right: 200px;">
+      <img src="assets\img\servicios\nutri1.png" class="card-img-top" alt="..." style="height: 445px;">
       <div class="card-body">
         <h5 class="card-title">NUTRICIONISTA</h5>
-        <p class="card-text">Entrenamiento en grupos reducidos que combina trabajo de fuerza, 
-          <br>movilidad y cardiovascular.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
     </div>
+    <div class="card" style="width: 18rem;">
+      <img src="assets\img\servicios\pesosLibres.png" class="card-img-top" alt="..." style="height: 450px;">
+      <div class="card-body">
+        <h5 class="card-title">PESO LIBRE</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+  </div>
 </div>
