Añadir carousel, quitar banner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- AÑADIR COMPONENTES  -->
 <app-navbar></app-navbar>
 <br>
+<app-footer></app-footer>
 <!-- <app-servicios></app-servicios> -->
 <router-outlet></router-outlet>
 
