--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg fixed-top bg-primary" data-bs-theme="dark"> <!-- fixed-top > antes de bg -->
   <div class="container-fluid">
-   <img id="logo-navbar" src="./assets/img/logo/logoCuadrado.png" alt="Logo" width="140" height="110" class="d-inline-block align-text-top">
+   <img id="logo-navbar" src="./assets/img/logo/logoCuadrado.png" alt="Logo" width="120" height="90" class="d-inline-block align-text-top">
   
    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -15,16 +15,16 @@
     <div class="offcanvas-body">
       <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">INICIO</a>
+          <a class="nav-link active" aria-current="page" href="#" routerLinkActive="active">INICIO</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#" routerLink="/servicios" routerLinkActive="active">SERVICIOS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">NUESTRO EQUIPO</a>
+          <a class="nav-link active" aria-current="page" href="#" routerLinkActive="active">NUESTRO EQUIPO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">CENTRO</a>
+          <a class="nav-link active" aria-current="page" href="#" routerLinkActive="active">CENTRO</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#" routerLink="/formulario" routerLinkActive="active">CONTACTO</a>
