--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
 <style>
         /* Establece la imagen de fondo BANNER */
         .bg-img {
-          background-image: url('./assets/img/fondo_Banner.png');
+          background-image: url(./assets/img/fondo/fondo_Banner.png);
           background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el contenedor */
           background-position: center; /* Centra la imagen */
           height: 100%; /* Establece la altura del contenedor al 100% del viewport */
@@ -40,16 +40,67 @@
     </div>
 </div>
 
-
-    
-
 </section>
 
-<!-- SERVICIOS -->
+<!-- CARTAS DE ICONOS  -->
+
+
+
+
+
+
+<!-- CARROUSEL SERVICIOS -->
 <section>
 
+    <div id="carouselExampleDark" class="carousel carousel-dark slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src= "./assets/img/servicios/ePersonal.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Entrenamiento Personal</h5>
+              <p></p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+
+
+
+
+   
+
 
 </section>
+
+
 
 
 
