--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,6 @@
 
 
 <br>
-
 <!-- banner -->
 <section>
 <style>
@@ -59,19 +58,28 @@
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
+         
+            
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src= "./assets/img/servicios/ePersonal.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Entrenamiento Personal</h5>
-              <p></p>
+            <div class="d-flex align-items-center justify-content-center">
+                <img src= "assets/img/servicios/nutri2.png"  class="d-block w-50" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                 <h5>NUTRICIÓN</h5>
+                 <p></p>
+                </div>
             </div>
           </div>
+
+
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="..." class="d-block w-100" alt="...">
+            <div class="d-flex align-items-center justify-content-center">
+                <img src="assets/img/servicios/nutri1.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+                 <h5>Fisioterapia</h5>
+                <p></p>
             </div>
+        </div>
+        </div>
           </div>
           <div class="carousel-item">
             <img src="..." class="d-block w-100" alt="...">
@@ -81,6 +89,9 @@
             </div>
           </div>
         </div>
+
+
+
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
@@ -89,7 +100,8 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+    
+    
 
 
 
