--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -7,13 +7,13 @@
   <br>
   <h3 style="text-align: center;">ENTRENAMIENTO PERSONAL</h3>
   <br>
-  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel ">
+  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <img src="assets\img\servicios\ePersonal.png" class="d-block w-100" alt="...">
+          <img src="assets\img\servicios\ePersonal.png" class="block w-100" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="" class="d-block w-100" alt="...">
+          <img src="assets\img\servicios\ePersonal2.png" class="block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -28,7 +28,7 @@
   <br>
   <h3 style="text-align: center;">ENTRENAMIENTOS GRUPALES</h3>
   <br>
-  <div style="display: flex; justify-content: center;">
+  <div style="display: flex; justify-content: center; background: linear-gradient(rgba(55, 55, 67, 0.748), rgb(0, 115, 255)); border-radius: 2%; padding: 15px;">
     <div class="card" style="width: 18rem; margin-right: 200px;">
       <img src="assets\img\servicios\MIITT.png" class="card-img-top" alt="...">
       <div class="card-body">
@@ -48,7 +48,7 @@
   <br>
   <h3 style="text-align: center;">SERVICIOS ADICIONALES</h3>
   <br>
-  <div style="display: flex; justify-content: center;">
+  <div style="display: flex; justify-content: center; background: linear-gradient(rgba(55, 55, 67, 0.748), rgb(0, 115, 255)); border-radius: 2%; padding: 15px;">
     <div class="card" style="width: 18rem; margin-right: 200px;">
       <img src="assets\img\servicios\fisio.png" class="card-img-top" alt="...">
       <div class="card-body">
