--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -43,10 +43,28 @@
 
 <!-- CARTAS DE ICONOS  -->
 
+<!-- CARACTERISTICAS ICONOS -->
 
-
-
-
+<section class="CaracteristicasSection">
+  <div class="row">
+      <div class="col CaracteristicasIconos">
+          <img src="./assets/img/iconos/icon_grupo_reducido.png" width="100" height="90">
+          <p>GRUPOS REDUCIDOS</p>
+      </div>
+      <div class="col CaracteristicasIconos">
+          <img src="./assets/img/iconos/CapturaPermanencia.PNG" width="100" height="90">
+          <p>SIN PERMANENCIA</p>
+      </div>
+      <div class="col CaracteristicasIconos">
+          <img src="./assets/img/iconos/icon_adaptamosAti.png" width="100" height="90">
+          <p>NOS ADAPTAMOS A TI</p>
+      </div>
+      <div class="col CaracteristicasIconos">
+          <img src="./assets/img/iconos/icon_horario_flexible.png" width="100" height="90">
+          <p>AMBIENTE BIOSEGURO</p>
+      </div>
+  </div>
+</section>
 
 <!-- CARROUSEL SERVICIOS -->
 <section>
