--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -48,7 +48,7 @@
 
 
 
-<!-- CARROUSEL SERVICIOS -->
+<!-- CARROUSEL SERVICIOS class="d-block w-50"  class=" img-fluid" -->
 <section>
 
     <div id="carouselExampleDark" class="carousel carousel-dark slide">
@@ -62,7 +62,7 @@
             
           <div class="carousel-item active" data-bs-interval="10000">
             <div class="d-flex align-items-center justify-content-center">
-                <img src= "assets/img/servicios/nutri2.png"  class="d-block w-50" alt="...">
+                <img src= "assets/img/servicios/fisio2.png"  alt="...">
                 <div class="carousel-caption d-none d-md-block">
                  <h5>NUTRICIÓN</h5>
                  <p></p>
