--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,12 +1,28 @@
-<p>footer works!</p>
-
 <footer>
+  <div id="footerNegro">
     <section class="buttons">
       <a href="#" class="fa fa-facebook"></a>
       <a href="#" class="fa fa-twitter"></a>
       <a href="#" class="fa fa-envelope"></a>
       <a href="#" class="fa fa-instagram"></a>
     </section><br>
-    <p>&copy; 2024 Marva Sport Center. Todos los derechos reservados.</p>
-  </footer>
+    <img id="logo-navbar" src="./assets/img/logo/logoCuadrado.png" alt="Logo" width="80" height="80" class="d-inline-block align-text-top">
+    <hr>
+    <p id="copyright">© Sport Center Marva 2022. Todos los derechos reservados.</p>
+    <!-- <div class="buttonContainer">
+      <div class="container mt-5">
+        <button type="button" class="btn btn-primary btn-round">Botón</button>
+      </div>
+      <div class="container mt-5">
+        <button type="button" class="btn btn-primary btn-round">Botón</button>
+      </div>
+    </div> -->
+  </div>
+  <div id="footerGris">
+    <p><a>Aviso Legal</a></p>
+    <p><a>Política de Privacidad</a></p>
+    <p><a>Política de Cookies</a></p>
+    <p><a>Configuración del Cookies</a></p>
+  </div>
+</footer>
 
