--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,29 @@
+<section class="DatosContacto">
+  <div class="row">
+      <div class="col DatosContactoDiv">
+          <img src="./assets/img/iconos/icon_grupo_reducido.png" width="100" height="90">
+          <div>
+            <strong>¿Dónde Estamos?</strong>
+            <p>Calle San Vicente Martir 174 bajo, 46007 Valencia - España</p>
+          </div>
+      </div>
+      <div class="col DatosContactoDiv">
+          <img src="./assets/img/iconos/icon_sinPermanencia.png" width="100" height="90">
+          <div class="ContactoTelefono">
+            <strong>Llámanos</strong>
+            <p>+34 963 293 774</p>
+            <p class="ParrafoTelefono">+34 673 027 522</p>
+          </div>
+      </div>
+      <div class="col DatosContactoDiv">
+          <img src="./assets/img/iconos/icon_adaptamosAti.png" width="100" height="90">
+          <div>
+            <strong>Escríbenos</strong>
+            <p>info&#64;sportcentermarva.com</p>
+          </div>
+      </div>
+  </div>
+</section>
 <footer>
   <div id="footerNegro">
     <section class="buttons">
