--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -66,6 +66,18 @@ hr {
     border-radius: 50%;
 }
 
+#facebook {
+    padding-left: 1em;
+    padding-right: 1em;
+    float: right;
+}
+
+#instagram {
+    padding-left: 1em;
+    padding-right: 1em;
+    float: right;
+}
+
 
 /* .btn-round {
     border-radius: 50%;
