--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -35,6 +35,10 @@
     <img id="logo-navbar" src="./assets/img/logo/logoCuadrado.png" alt="Logo" width="80" height="80" class="d-inline-block align-text-top">
     <hr>
     <p id="copyright">© Sport Center Marva 2022. Todos los derechos reservados.</p>
+    <img src="./assets/img/iconos/icon_instagram.PNG" width="30" height="30" style="float: right;">
+    <p style="float: right;">&nbsp;</p>
+    <img src="./assets/img/iconos/icon_facebook.PNG" width="20" height="30" style="float: right;">
+
     <!-- <div class="buttonContainer">
       <div class="container mt-5">
         <button type="button" class="btn btn-primary btn-round">Botón</button>
@@ -44,7 +48,7 @@
       </div>
     </div> -->
   </div>
-  <div id="footerGris">
+  <div id="footerGris" style="clear: right">
     <p><a>Aviso Legal</a></p>
     <p><a>Política de Privacidad</a></p>
     <p><a>Política de Cookies</a></p>
