--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg fixed-top bg-primary" data-bs-theme="dark"> <!-- fixed-top > antes de bg -->
+<nav class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark"> <!-- fixed-top > antes de bg -->
   <div class="container-fluid">
    <img id="logo-navbar" src="./assets/img/logo/logoCuadrado.png" alt="Logo" width="120" height="90" class="d-inline-block align-text-top">
   
