Añadido hover y redirecciones redes sociales footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -41,9 +41,14 @@
     <img id="logo-navbar" src="./assets/img/logo/logoCuadrado.png" alt="Logo" width="80" height="80" class="d-inline-block align-text-top">
     <hr>
     <p id="copyright">© Sport Center Marva 2022. Todos los derechos reservados.</p>
-    <img src="./assets/img/iconos/icon_instagram.PNG" width="30" height="30" style="float: right;">
+    <a href="https://www.instagram.com" target="blank">
+      <img src="./assets/img/iconos/icon_instagram.PNG" width="30" height="30" style="float: right;" onmouseover="this.src='./assets/img/iconos/icon_instagram_azul.PNG';" onmouseout="this.src='./assets/img/iconos/icon_instagram.PNG';">
+    </a>
     <p style="float: right;">&nbsp;</p>
-    <img src="./assets/img/iconos/icon_facebook.PNG" width="20" height="30" style="float: right;">
+    <a href="https://www.facebook.com" target="blank">
+      <img src="./assets/img/iconos/icon_facebook.PNG" width="20" height="30" style="float: right;" onmouseover="this.src='./assets/img/iconos/icon_facebook_azul.png';" onmouseout="this.src='./assets/img/iconos/icon_facebook.PNG';">
+    </a>
+
 
     <!-- <div class="buttonContainer">
       <div class="container mt-5">
@@ -61,4 +66,5 @@
     <p><a>Configuración del Cookies</a></p>
   </div>
 </footer>
+
 
