--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -30,6 +30,13 @@
   </div>
 </section>
 
+<!-- ICONO WHATSAPP FIJO -->
+
+
+<a href="https://www.whatsapp.com/" target="blank">
+  <img class="Whatsapp" src="./assets/img/iconos/Whatsapp.png" width="50" height="50">
+</a>
+
 <footer>
   <div id="footerNegro">
     <section class="buttons">
