Cambios en el formulario de contacto

--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -2,7 +2,7 @@
 
 
 
-<div class="container-fluid" style="background-color: rgb(202, 202, 202); padding: 20px; border-radius: 5px; ">
+<div class="container-fluid Formulario" style="background-color: rgb(202, 202, 202); padding: 20px; border-radius: 5px; ">
     <form class="form-info">
         <h3 class="display-6">Accede a una reserva gratuita</h3>
         <div class="row g-3 mb-3"> <!--g <espacion entre nombre-apellidos>   mb < marginBotom > -->
