Editadas redirecciones redes sociales

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,7 @@
 
+<div class="OfertaEspecial">
 
+</div>
 
 
 <section class="DatosContacto">
@@ -32,8 +34,7 @@
 
 <!-- ICONO WHATSAPP FIJO -->
 
-
-<a href="https://www.whatsapp.com/" target="blank">
+<a href="https://api.whatsapp.com/send/?phone=34673027522&text&type=phone_number&app_absent=0" target="blank">
   <img class="Whatsapp" src="./assets/img/iconos/Whatsapp.png" width="50" height="50">
 </a>
 
@@ -48,11 +49,11 @@
     <img id="logo-navbar" src="./assets/img/logo/logoCuadrado.png" alt="Logo" width="80" height="80" class="d-inline-block align-text-top">
     <hr>
     <p id="copyright">© Sport Center Marva 2022. Todos los derechos reservados.</p>
-    <a href="https://www.instagram.com" target="blank">
+    <a href="https://www.instagram.com/marva.sport.center/" target="blank">
       <img src="./assets/img/iconos/icon_instagram.PNG" width="30" height="30" style="float: right;" onmouseover="this.src='./assets/img/iconos/icon_instagram_azul.PNG';" onmouseout="this.src='./assets/img/iconos/icon_instagram.PNG';">
     </a>
     <p style="float: right;">&nbsp;</p>
-    <a href="https://www.facebook.com" target="blank">
+    <a href="https://www.facebook.com/SportCenterMarva/" target="blank">
       <img src="./assets/img/iconos/icon_facebook.PNG" width="20" height="30" style="float: right;" onmouseover="this.src='./assets/img/iconos/icon_facebook_azul.png';" onmouseout="this.src='./assets/img/iconos/icon_facebook.PNG';">
     </a>
 
