--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,22 @@
 
 <div class="OfertaEspecial">
-
+  <h1>OFERTA ESPECIAL</h1>
+  <br>
+  <p>Date de alta con un familiar –  amig&#64; – vecin&#64; y obtienes</p>
+  <br>
+  <p class="Mensualidad">1 PERSONA OBTIENE 50% DTO EN MENSUALIDAD DURANTE 3 MESES</p>
+  <br>
+  <div class="CaracteristicasOferta">
+    <p>Clase gratuita</p>
+    <p>Medición Inbody</p>
+    <p>Valoración de Fisioterapia</p>
+    <p>Sin matrícula</p>
+  </div>
+  <br>
+  <p>Rellena el formulario y en comentario «Oferta Especial»</p>
+  <br>
+  <a href="#" routerLink="/formulario" (click)="scrollToTop()" routerLinkActive="active" type="button" class="btn btn-light btn-lg" style="border-radius: 0px!important;"><strong>CONSEGUIR OFERTA</strong></a>
 </div>
-
 
 <section class="DatosContacto">
   <div class="row">
