Modificacion en servicios, y en el json

--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -7,23 +7,14 @@
   <br>
   <h3 style="text-align: center;">ENTRENAMIENTO PERSONAL</h3>
   <br>
-  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
-          <img src="assets\img\servicios\ePersonal.png" class="block w-100" alt="...">
-        </div>
-        <div class="carousel-item" data-bs-interval="2000">
-          <img src="assets\img\servicios\ePersonal2.png" class="block w-100" alt="...">
-        </div>
+  <div style="align-items: center; background: linear-gradient(rgba(55, 55, 67, 0.748), rgb(0, 115, 255)); border-radius: 2%; padding: 15px;">
+    <div class="card" style="width: 40%; margin-left: 400px;">
+      <img src="assets\img\servicios\ePersonal3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Alcanza tus metas con un enfoque personalizado: Entrenamiento personal para maximizar tu potencial y transformar tu cuerpo."</p>
+        <a href="" class="btn btn-primary" type="button" style="margin-left: 440px;">Ver mas</a>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+    </div>
   </div>
   <br>
   <h3 style="text-align: center;">ENTRENAMIENTOS GRUPALES</h3>
@@ -34,6 +25,7 @@
       <div class="card-body">
         <h5 class="card-title">MIT</h5>
         <p class="card-text">Entrenamiento de intervalos de alta intensidad, combina tiempo de trabajo y tiempo de descanso.</p>
+        <a href="" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -41,6 +33,7 @@
       <div class="card-body">
         <h5 class="card-title">TRAINING</h5>
         <p class="card-text">Entrenamiento en grupos reducidos que combina trabajo de fuerza, movilidad y cardiovascular .</p>
+        <a href="" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
       </div>
     </div>
   </div>
@@ -53,21 +46,24 @@
       <img src="assets\img\servicios\fisio.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">FISIOTERAPIA</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text">Recupera tu bienestar: Servicios de Fisioterapia dedicados a tu salud y vitalidad</p>
+        <a href="" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
       </div>
     </div>
     <div class="card" style="width: 18rem; margin-right: 200px;">
       <img src="assets\img\servicios\nutri1.png" class="card-img-top" alt="..." style="height: 445px;">
       <div class="card-body">
         <h5 class="card-title">NUTRICIONISTA</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text">Alimentar tu bienestar y potenciar tu salud desde adentro hacia afuera</p>
+        <a href="" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
       <img src="assets\img\servicios\pesosLibres.png" class="card-img-top" alt="..." style="height: 450px;">
       <div class="card-body">
-        <h5 class="card-title">PESO LIBRE</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h5 class="card-title">ENTRENAMIENTO LIBRE</h5>
+        <p class="card-text">Cuenta con todas nuestras máquinas y demas equipo para realizar tus actividades</p>
+        <a href="" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
       </div>
     </div>
   </div>
