--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -23,4 +23,7 @@
 /* CUSTOMIZE THE CAROUSEL
 ---
 .----------------------------------------------- */
+.carousel-serviciosdestacados{
 
+    margin-bottom: 3em;
+}
