--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -121,7 +121,7 @@
 </section> -->
 
 <!-- PRUEBA CAROUSEL  -->
-<div class="carousel">
+<div class="carousel-serviciosdestacados">
   <div id="carouselExampleSlidesOnly" class="carousel slide pointer-event" data-bs-ride="carousel">
     <div class="carousel-inner">
 
