Añadida funcionalidad scrollToTop a los elementos del navbar

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -15,7 +15,7 @@
   <br>
   <p>Rellena el formulario y en comentario «Oferta Especial»</p>
   <br>
-  <a href="#" routerLink="/formulario" (click)="scrollToTop()" routerLinkActive="active" type="button" class="btn btn-light btn-lg" style="border-radius: 0px!important;"><strong>CONSEGUIR OFERTA</strong></a>
+  <a href="#" routerLink="/formulario" routerLinkActive="active" type="button" class="btn btn-light btn-lg" style="border-radius: 0px!important;" (click)="scrollToTop()"><strong>CONSEGUIR OFERTA</strong></a>
 </div>
 
 <section class="DatosContacto">
